# CH57x_StdPeripheral_Driver

./: CMakeLists.txt  README.md
include/: CH579SFR.h  CH57x_adc.h  CH57x_clk.h  CH57x_common.h  CH57x_flash.h  CH57x_gpio.h  CH57x_lcd.h  CH57x_pwm.h  CH57x_pwr.h  CH57x_spi.h  CH57x_sys.h  CH57x_timer.h  CH57x_uart.h  CH57x_usbdev.h  CH57x_usbhost.h
lib/include/: CH579UFI.h  CH57xBLE_ROM.h
src/: CH57x_adc.c  CH57x_clk.c  CH57x_flash.c  CH57x_gpio.c  CH57x_int.c  CH57x_lcd.c  CH57x_pwm.c  CH57x_pwr.c  CH57x_spi0.c  CH57x_spi1.c  CH57x_sys.c  CH57x_timer0.c  CH57x_timer1.c  CH57x_timer2.c  CH57x_timer3.c  CH57x_uart0.c  CH57x_uart1.c  CH57x_uart2.c  CH57x_uart3.c  CH57x_usbdev.c  CH57x_usbhostBase.c  CH57x_usbhostClass.c
src/CH579UFI/: CH579UFI.c
tools/: convert_charset.sh
